UNRELEASED CHANGES:

New features:

*

Enhancements:

*

Fixes:

* Fix register request validate
* Fix relationship create

RELEASED VERSIONS:

v2.13.0 - 2019-04-07
--------------------

Enhancements:

* Add ability to update a relationship
* Add a sex type behind the gender
* Make gender optional on a contact profile
* Add a Collection::sortByCollator macro

Fixes:

* Fix destroy relationship
* Fix event dispatch for login (google2fa, u2f) events handle
* Fix address input label mistake
* Fix dashboard crash when reminder is empty
* Fix import vCard with Cyrillic encoding
* Fix import/export vcard with birthday with year unknown
* Fix contact missing create form
* Fix money format for non two "2" minor unit currencies

v2.12.1 - 2019-03-09
--------------------

Enhancements:

* Add eloquent relationships touches

Fixes:

* Fix reminders not being sent
* Fix setting deceased information with removing date and reminder
* Fix contact information update
* Fix adding people on activity create and update
* Fix setting a relationship without selecting any birthdate option
* Fix several typos in English language files
* Fix Journal view now includes Activities as intended
* Fix deleting a LifeEvent no longer deletes the associated Contact

v2.12.0 - 2019-02-09
--------------------

New features:

* Support CalDAV to export the collection of birthdays (breaking change: url of CardDAV is '/dav' now)
* Add a page in settings to display all DAV resources
* Add notion of instance administrator for a user
* Add ability to name u2f security keys and to delete register ones
* Add ability to add a comment when rating your day in the journal
* Add API methods to manage genders
* Breaking change: rewrite API methods to manage contacts

Enhancements:

* Don't change timestamps on contact number_of_views update
* Redirect to the related real contact when trying to display a partial contact
* Use iterator reader for vcard imports
* Accept last name when using contact search field