@@ -10,6 +10,7 @@ Enhancements:
 
 Fixes:
 
+* Fix display relationship without a ofContact property
 * Fix register request validate
 * Fix relationship create
 
